[package]
name = "uctl"
description = "Generic control library for low-end hardware"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["fixed-point", "filter", "regulator", "control", "embedded"]
categories = ["algorithms", "data-structures", "embedded", "no-std"]

[dependencies]
typenum.workspace = true
generic-array.workspace = true
derive_deref.workspace = true
ufix.workspace = true

[features]
default = []
all = ["i128"]
i128 = ["typenum/i128", "ufix/i128"]
