[package]
name = "ufix"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
description = "Flexible and usable generic fixed-point numeric type"
edition = "2018"
repository = "https://github.com/katyo/ucontrol"
license = "MIT"
readme = "README.md"
keywords = ["fixed-point", "number", "typenum", "embedded", "no-std"]
categories = ["algorithms", "data-structures", "embedded", "no-std"]

[badges]
travis-ci = { repoitory = "katyo/ucontrol" }
maintenance = { status = "experimental" }

[dependencies]
typenum = "^1"

[features]
default = []
i128 = ["typenum/i128"]
word8 = []
word16 = []
