[package]
name = "ufix"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
description = "Flexible and usable generic fixed-point numeric type"
edition = "2018"
repository = "https://github.com/katyo/uctl-rs"
license = "MIT"
readme = "README.md"
keywords = ["fixed-point", "number", "typenum", "embedded", "no-std"]
categories = ["algorithms", "data-structures", "embedded", "no-std"]

[badges]
travis-ci = { repoitory = "katyo/uctl-rs", tld = "com" }
maintenance = { status = "experimental" }

[dependencies]
typenum = "^1"

[dependencies.hash32]
version = "^0.1"
optional = true

[features]
default = []
i128 = ["typenum/i128"]
word8 = []
word16 = []
