[package]
name = "ufix"
description = "Flexible and usable generic fixed-point numeric type"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["fixed-point", "number", "typenum", "embedded", "no-std"]
categories = ["algorithms", "data-structures", "embedded", "no-std"]

[dependencies]
typenum.workspace = true

[dependencies.hash32]
workspace = true
optional = true

[dependencies.bitcode]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = []
all = ["word8", "word16", "i128", "serde", "std"]
i128 = ["typenum/i128"]
word8 = []
word16 = []
std = ["bitcode?/std", "serde?/std"]
